# crypto-bot-delivery

./: CI_CD__Robot__and_Simulation.md  CLASS_DIAGRAM.md  README.md  ROS2.md  ROS_FLOW.md  SIMULATUIONS.md  Workspace_Catkin  nodemcu_esp8266.md  respberry_pi.md
crypto-bot-delivery/: .flake8  README.md  pyproject.toml
crypto-bot-delivery/POC/poc_blockchain/: README.md
crypto-bot-delivery/POC/poc_qr_security/: README.md
crypto-bot-delivery/POC/poc_ros2_navigation/: README.md
crypto-bot-delivery/docs/: blockchain_interaction_guide.md  smart_contract_guide.md
crypto-bot-delivery/smart_contracts/: Escrow.json  Escrow.sol
crypto-bot-delivery/src/: setup.py
crypto-bot-delivery/src/delivery_api/: __init__.py  requirements.txt
crypto-bot-delivery/src/delivery_api/app/: __init__.py  main.py
crypto-bot-delivery/src/delivery_api/tests/: __init__.py
crypto-bot-delivery/src/delivery_crypto/: blockchain_interface.py
crypto-bot-delivery/src/delivery_crypto/tests/: test_blockchain_interface.py
crypto-bot-delivery/src/delivery_navigation/: README.md  package.xml  setup.cfg  setup.py
crypto-bot-delivery/src/delivery_navigation/config/: nav2_amcl_params.yaml  nav2_params.yaml
crypto-bot-delivery/src/delivery_navigation/launch/: bringup_nav2.launch.py  navigation_simulation.launch.py  slam_simulation.launch.py
crypto-bot-delivery/src/delivery_qr/: README.md  __init__.py  generator.py  scanner.py
crypto-bot-delivery/src/delivery_qr/tests/: .gitkeep  test_generator.py  (+1 more)
crypto-bot-delivery/src/delivery_simulation/: README.md  package.xml  setup.cfg  setup.py
(+45 files in other folders)
